--- a/report/phpunit/Poo/dashboard.html
+++ b/report/phpunit/Poo/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for C:\xampp\htdocs\cleancode\src\Ipssi/Logger</title>
+  <title>Dashboard for C:\xampp\htdocs\cleancode\src\Ipssi/Poo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../.css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="../.css/nv.d3.min.css" rel="stylesheet" type="text/css">
@@ -19,7 +19,7 @@
      <div class="col-md-12">
       <ol class="breadcrumb">
         <li><a href="../index.html">C:\xampp\htdocs\cleancode\src\Ipssi</a></li>
-        <li><a href="index.html">Logger</a></li>
+        <li><a href="index.html">Poo</a></li>
         <li class="active">(Dashboard)</li>
 
       </ol>
@@ -59,9 +59,11 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="File.php.html#8">Ipssi\Logger\File</a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="Formatter/Error.php.html#7">Ipssi\Logger\Formatter\Error</a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="Message.php.html#5">Ipssi\Logger\Message</a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="BookRepo.php.html#5">Ipssi\Poo\BookRepo</a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="CarRepo.php.html#5">Ipssi\Poo\CarRepo</a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="index.php.html#7">BookRepository</a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="index.php.html#13">Cinema</a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="index.php.html#19">CinemaCountAdapter</a></td><td class="text-right">0%</td></tr>
 
        </tbody>
       </table>
@@ -78,7 +80,6 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="Message.php.html#5">Ipssi\Logger\Message</a></td><td class="text-right">30</td></tr>
 
        </tbody>
       </table>
@@ -116,13 +117,20 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="File.php.html#26"><abbr title="Ipssi\Logger\File::__construct">__construct</abbr></a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="File.php.html#35"><abbr title="Ipssi\Logger\File::setFormater">setFormater</abbr></a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="File.php.html#44"><abbr title="Ipssi\Logger\File::getFilename">getFilename</abbr></a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="File.php.html#53"><abbr title="Ipssi\Logger\File::setFilename">setFilename</abbr></a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="File.php.html#65"><abbr title="Ipssi\Logger\File::log">log</abbr></a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="Formatter/Error.php.html#9"><abbr title="Ipssi\Logger\Formatter\Error::format">format</abbr></a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="Message.php.html#12"><abbr title="Ipssi\Logger\Message::interpolate">interpolate</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="BookRepo.php.html#19"><abbr title="Ipssi\Poo\BookRepo::current">current</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="BookRepo.php.html#27"><abbr title="Ipssi\Poo\BookRepo::next">next</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="BookRepo.php.html#35"><abbr title="Ipssi\Poo\BookRepo::key">key</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="BookRepo.php.html#43"><abbr title="Ipssi\Poo\BookRepo::valid">valid</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="BookRepo.php.html#51"><abbr title="Ipssi\Poo\BookRepo::rewind">rewind</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="CarRepo.php.html#18"><abbr title="Ipssi\Poo\CarRepo::current">current</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="CarRepo.php.html#26"><abbr title="Ipssi\Poo\CarRepo::next">next</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="CarRepo.php.html#34"><abbr title="Ipssi\Poo\CarRepo::key">key</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="CarRepo.php.html#42"><abbr title="Ipssi\Poo\CarRepo::valid">valid</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="CarRepo.php.html#50"><abbr title="Ipssi\Poo\CarRepo::rewind">rewind</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="index.php.html#8"><abbr title="BookRepository::count">count</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="index.php.html#14"><abbr title="Cinema::getPlaceNumber">getPlaceNumber</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="index.php.html#22"><abbr title="CinemaCountAdapter::__construct">__construct</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="index.php.html#27"><abbr title="CinemaCountAdapter::count">count</abbr></a></td><td class="text-right">0%</td></tr>
 
        </tbody>
       </table>
@@ -139,7 +147,6 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="Message.php.html#12"><abbr title="Ipssi\Logger\Message::interpolate">interpolate</abbr></a></td><td class="text-right">30</td></tr>
 
        </tbody>
       </table>
@@ -170,7 +177,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([3,0,0,0,0,0,0,0,0,0,0,0], "Class Coverage"))
+      .datum(getCoverageDistributionData([5,0,0,0,0,0,0,0,0,0,0,0], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -188,7 +195,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([7,0,0,0,0,0,0,0,0,0,0,0], "Method Coverage"))
+      .datum(getCoverageDistributionData([14,0,0,0,0,0,0,0,0,0,0,0], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -238,7 +245,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[0,5,"<a href=\"File.php.html#8\">Ipssi\\Logger\\File<\/a>"],[0,1,"<a href=\"Formatter\/Error.php.html#7\">Ipssi\\Logger\\Formatter\\Error<\/a>"],[0,5,"<a href=\"Message.php.html#5\">Ipssi\\Logger\\Message<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[0,5,"<a href=\"BookRepo.php.html#5\">Ipssi\\Poo\\BookRepo<\/a>"],[0,5,"<a href=\"CarRepo.php.html#5\">Ipssi\\Poo\\CarRepo<\/a>"],[0,1,"<a href=\"index.php.html#7\">BookRepository<\/a>"],[0,1,"<a href=\"index.php.html#13\">Cinema<\/a>"],[0,2,"<a href=\"index.php.html#19\">CinemaCountAdapter<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -262,7 +269,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[0,1,"<a href=\"File.php.html#26\">Ipssi\\Logger\\File::__construct<\/a>"],[0,1,"<a href=\"File.php.html#35\">Ipssi\\Logger\\File::setFormater<\/a>"],[0,1,"<a href=\"File.php.html#44\">Ipssi\\Logger\\File::getFilename<\/a>"],[0,1,"<a href=\"File.php.html#53\">Ipssi\\Logger\\File::setFilename<\/a>"],[0,1,"<a href=\"File.php.html#65\">Ipssi\\Logger\\File::log<\/a>"],[0,1,"<a href=\"Formatter\/Error.php.html#9\">Ipssi\\Logger\\Formatter\\Error::format<\/a>"],[0,5,"<a href=\"Message.php.html#12\">Ipssi\\Logger\\Message::interpolate<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[0,1,"<a href=\"BookRepo.php.html#19\">Ipssi\\Poo\\BookRepo::current<\/a>"],[0,1,"<a href=\"BookRepo.php.html#27\">Ipssi\\Poo\\BookRepo::next<\/a>"],[0,1,"<a href=\"BookRepo.php.html#35\">Ipssi\\Poo\\BookRepo::key<\/a>"],[0,1,"<a href=\"BookRepo.php.html#43\">Ipssi\\Poo\\BookRepo::valid<\/a>"],[0,1,"<a href=\"BookRepo.php.html#51\">Ipssi\\Poo\\BookRepo::rewind<\/a>"],[0,1,"<a href=\"CarRepo.php.html#18\">Ipssi\\Poo\\CarRepo::current<\/a>"],[0,1,"<a href=\"CarRepo.php.html#26\">Ipssi\\Poo\\CarRepo::next<\/a>"],[0,1,"<a href=\"CarRepo.php.html#34\">Ipssi\\Poo\\CarRepo::key<\/a>"],[0,1,"<a href=\"CarRepo.php.html#42\">Ipssi\\Poo\\CarRepo::valid<\/a>"],[0,1,"<a href=\"CarRepo.php.html#50\">Ipssi\\Poo\\CarRepo::rewind<\/a>"],[0,1,"<a href=\"index.php.html#8\">BookRepository::count<\/a>"],[0,1,"<a href=\"index.php.html#14\">Cinema::getPlaceNumber<\/a>"],[0,1,"<a href=\"index.php.html#22\">CinemaCountAdapter::__construct<\/a>"],[0,1,"<a href=\"index.php.html#27\">CinemaCountAdapter::count<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
